[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "httpx>=0.28.1",
    "ipython>=9.11.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "openai>=2.26.0",
    "tavily>=1.1.0",
]
